--- a/train_model_1.ipynb
+++ b/train_model_1.ipynb
@@ -1028,7 +1028,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('research')",
+   "display_name": "Python 3.10.8 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -1042,12 +1042,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "eb38fa78ee3775302a1338b080c54d2cfaf66812fbe51ea9112886fc85d2bb05"
+    "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
    }
   }
  },
