--- a/exp.ipynb
+++ b/exp.ipynb
@@ -4,344 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "130438929d394b18b6fd9c9559af96fa",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/690 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "05578f5795764f4fb0404c6bfc858118",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/190 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "24a901ce3a844d8c8987529051d4579c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/2.87k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "70780a9b83d2469f82727c58cee31ec0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/669 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "90811a6eb8644d72b5281322820fbd9a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/122 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "82caa7e271984ad0b8adf1ea0fb955c3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/438M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6d141987657248b7a3191100a40cd5e4",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8366245cd8b24e3d81b97786411e4af3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "29ca101478a44d9cad8a2c30f4050283",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60ce1244c755439b97c540fbc4b4475f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/450 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2bdb64366b184345a6ee745322e0e353",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a2e9fbe49b32493c8f6b9291c1ff07a3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/229 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6c7aafa82cb45f68f74dc38f2534d42",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/690 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "18d7673b2219435da536d8c024d59fd1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/190 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c7a58294a3848c89300f5779583d9e7",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/2.90k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c8b2b3e27b204d7cb79347c7fbf91595",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/674 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "963fa310403343b3815b4b2057af290c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/122 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0fe986021aa443ac8a9cb57ceb6664d3",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/438M [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7c9bc6ba9d3d43cdba079889d9ee741b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/53.0 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a8539c2878a4501bdfb4ab3d32db812",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/112 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "85ebe262739b467abbd949c881fc7c80",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/466k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3040c78bce214c6ca52ea01fe0a08a29",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/456 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8ecf7ac5a74a4ec2951010d0281e3b4f",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/232k [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f2e6e07014784c51ae4b79f26d7246b9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Downloading:   0%|          | 0.00/229 [00:00<?, ?B/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sentence_transformers import SentenceTransformer, util\n",
     "passage_encoder = SentenceTransformer('facebook-dpr-ctx_encoder-single-nq-base')\n",
@@ -351,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -361,7 +24,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "INFO: Pandarallel will run on 6 workers.\n",
+      "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n",
+      "\n",
+      "WARNING: You are on Windows. If you detect any issue with pandarallel, be sure you checked out the Troubleshooting page:\n",
+      "https://nalepae.github.io/pandarallel/troubleshooting/\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pandarallel import pandarallel\n",
+    "pandarallel.initialize(progress_bar=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def normalize_text(text):\n",
+    "    from bs4 import BeautifulSoup\n",
+    "    import re\n",
+    "    def strip_html_tags(text):\n",
+    "        soup = BeautifulSoup(text, \"html.parser\")\n",
+    "        stripped_text = soup.get_text(separator=\" \")\n",
+    "        return stripped_text\n",
+    "    text = strip_html_tags(text)\n",
+    "    # remove 'BULLET::::-'\n",
+    "    text = re.sub(r'BULLET::::-', ' ', text)\n",
+    "    # remove = if more than 1\n",
+    "    text = re.sub(r'={2,}', ' ', text)\n",
+    "    # emove duplicate spaces\n",
+    "    text = re.sub(r'  +', ' ', text)\n",
+    "    # remove  newline characters\n",
+    "    text = re.sub(r'\\s+', ' ', text)\n",
+    "\n",
+    "    return text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "630225d8f255445397aecceb30d3a7b8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=212245), Label(value='0 / 212245')…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "df['text'] = df['text'].parallel_apply(normalize_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +134,7 @@
        "      <td>2</td>\n",
        "      <td>https://vi.wikipedia.org/wiki?curid=2</td>\n",
        "      <td>Trang Chính</td>\n",
-       "      <td>Trang Chính\\n\\n&lt;templatestyles src=\"Wiki2021/s...</td>\n",
+       "      <td>Trang Chính __NOEDITSECTION__</td>\n",
        "      <td>2022-05-12 12:46:53+00:00</td>\n",
        "      <td>68591979</td>\n",
        "    </tr>\n",
@@ -408,7 +143,7 @@
        "      <td>4</td>\n",
        "      <td>https://vi.wikipedia.org/wiki?curid=4</td>\n",
        "      <td>Internet Society</td>\n",
-       "      <td>Internet Society\\n\\nInternet Society hay ISOC ...</td>\n",
+       "      <td>Internet Society Internet Society hay ISOC là ...</td>\n",
        "      <td>2022-01-20 07:59:10+00:00</td>\n",
        "      <td>67988747</td>\n",
        "    </tr>\n",
@@ -417,7 +152,7 @@
        "      <td>13</td>\n",
        "      <td>https://vi.wikipedia.org/wiki?curid=13</td>\n",
        "      <td>Tiếng Việt</td>\n",
-       "      <td>Tiếng Việt\\n\\nTiếng Việt, cũng gọi là tiếng Vi...</td>\n",
+       "      <td>Tiếng Việt Tiếng Việt, cũng gọi là tiếng Việt ...</td>\n",
        "      <td>2022-05-29 03:42:42+00:00</td>\n",
        "      <td>68660631</td>\n",
        "    </tr>\n",
@@ -426,7 +161,7 @@
        "      <td>24</td>\n",
        "      <td>https://vi.wikipedia.org/wiki?curid=24</td>\n",
        "      <td>Ohio</td>\n",
-       "      <td>Ohio\\n\\nOhio (viết tắt là OH, viết tắt cũ là O...</td>\n",
+       "      <td>Ohio Ohio (viết tắt là OH, viết tắt cũ là O.) ...</td>\n",
        "      <td>2022-04-17 08:15:22+00:00</td>\n",
        "      <td>68482118</td>\n",
        "    </tr>\n",
@@ -435,7 +170,7 @@
        "      <td>26</td>\n",
        "      <td>https://vi.wikipedia.org/wiki?curid=26</td>\n",
        "      <td>California</td>\n",
-       "      <td>California\\n\\nCalifornia (phát âm như \"Ca-li-p...</td>\n",
+       "      <td>California California (phát âm như \"Ca-li-phót...</td>\n",
        "      <td>2022-06-16 15:27:07+00:00</td>\n",
        "      <td>68738039</td>\n",
        "    </tr>\n",
@@ -452,11 +187,11 @@
        "4  26  https://vi.wikipedia.org/wiki?curid=26        California   \n",
        "\n",
        "                                                text  \\\n",
-       "0  Trang Chính\\n\\n<templatestyles src=\"Wiki2021/s...   \n",
-       "1  Internet Society\\n\\nInternet Society hay ISOC ...   \n",
-       "2  Tiếng Việt\\n\\nTiếng Việt, cũng gọi là tiếng Vi...   \n",
-       "3  Ohio\\n\\nOhio (viết tắt là OH, viết tắt cũ là O...   \n",
-       "4  California\\n\\nCalifornia (phát âm như \"Ca-li-p...   \n",
+       "0                      Trang Chính __NOEDITSECTION__   \n",
+       "1  Internet Society Internet Society hay ISOC là ...   \n",
+       "2  Tiếng Việt Tiếng Việt, cũng gọi là tiếng Việt ...   \n",
+       "3  Ohio Ohio (viết tắt là OH, viết tắt cũ là O.) ...   \n",
+       "4  California California (phát âm như \"Ca-li-phót...   \n",
        "\n",
        "                  timestamp     revid  \n",
        "0 2022-05-12 12:46:53+00:00  68591979  \n",
@@ -466,7 +201,7 @@
        "4 2022-06-16 15:27:07+00:00  68738039  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -477,31 +212,94 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "765e0d512c1b4b6092f18bc10c488920",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=212245), Label(value='0 / 212245')…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "passages = df[['title','text']].parallel_apply(lambda x: ' [SEP] '.join(x), axis=1).tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "f9ef8e7be2cb429c89d7a8dcd91f5262",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Batches:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "passage_embeddings = passage_encoder.encode(passages,show_progress_bar=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Scores: tensor([[77.8886, 65.5388, 64.5764]])\n"
+      "Xuân Viên (định hướng) (Score: 80.0451)\n",
+      "Minh Chuẩn (Score: 79.4481)\n",
+      "Hồ Sĩ Tạo (định hướng) (Score: 78.0993)\n",
+      "Đại Đỗ (Score: 77.6928)\n",
+      "Tiết Tương Công (Score: 76.8388)\n",
+      "Le Dourn (Score: 76.7260)\n",
+      "Lâm Đồng (định hướng) (Score: 76.4727)\n",
+      "Lệch khúc xạ (Score: 75.7669)\n",
+      "Doanh thu (kế toán) (Score: 75.3769)\n",
+      "Bộ Huyệt (穴) (Score: 74.9923)\n"
      ]
     }
    ],
    "source": [
-    "passages = [\n",
-    "    \"London [SEP] London is the capital and largest city of England and the United Kingdom.\",\n",
-    "    \"Paris [SEP] Paris is the capital and most populous city of France.\",\n",
-    "    \"Berlin [SEP] Berlin is the capital and largest city of Germany by both area and population.\"\n",
-    "]\n",
-    "passage_embeddings = passage_encoder.encode(passages)\n",
-    "\n",
-    "query = \"What is the capital of England?\"\n",
+    "query = \"Châu Văn Minh sinh ngày mấy\"\n",
     "query_embedding = query_encoder.encode(query)\n",
     "\n",
     "#Important: You must use dot-product, not cosine_similarity\n",
-    "scores = util.dot_score(query_embedding, passage_embeddings)\n",
-    "print(\"Scores:\", scores)"
+    "scores = util.dot_score(query_embedding, passage_embeddings)[0].numpy()\n",
+    "scores = zip(range(len(scores)), scores)\n",
+    "scores = sorted(scores, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "for idx, score in scores[0:10]:\n",
+    "    print(temp_df.iloc[idx]['title'], \"(Score: %.4f)\" % (score))"
    ]
   }
  ],
