--- a/exp.ipynb
+++ b/exp.ipynb
@@ -2,304 +2,69 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sentence_transformers import SentenceTransformer, util\n",
-    "passage_encoder = SentenceTransformer('facebook-dpr-ctx_encoder-single-nq-base')\n",
-    "\n",
-    "query_encoder = SentenceTransformer('facebook-dpr-question_encoder-single-nq-base')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
-    "df = pd.read_json('C:/Users/ngoph/Desktop/zalo_ai/wikipedia_20220620_cleaned/wikipedia_20220620_cleaned.jsonl', lines=True)"
+    "import json"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO: Pandarallel will run on 6 workers.\n",
-      "INFO: Pandarallel will use standard multiprocessing data transfer (pipe) to transfer data between the main process and workers.\n",
-      "\n",
-      "WARNING: You are on Windows. If you detect any issue with pandarallel, be sure you checked out the Troubleshooting page:\n",
-      "https://nalepae.github.io/pandarallel/troubleshooting/\n"
-     ]
-    }
-   ],
-   "source": [
-    "from pandarallel import pandarallel\n",
-    "pandarallel.initialize(progress_bar=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def normalize_text(text):\n",
-    "    from bs4 import BeautifulSoup\n",
-    "    import re\n",
-    "    def strip_html_tags(text):\n",
-    "        soup = BeautifulSoup(text, \"html.parser\")\n",
-    "        stripped_text = soup.get_text(separator=\" \")\n",
-    "        return stripped_text\n",
-    "    text = strip_html_tags(text)\n",
-    "    # remove 'BULLET::::-'\n",
-    "    text = re.sub(r'BULLET::::-', ' ', text)\n",
-    "    # remove = if more than 1\n",
-    "    text = re.sub(r'={2,}', ' ', text)\n",
-    "    # emove duplicate spaces\n",
-    "    text = re.sub(r'  +', ' ', text)\n",
-    "    # remove  newline characters\n",
-    "    text = re.sub(r'\\s+', ' ', text)\n",
-    "\n",
-    "    return text"
+    "def data_extraction(file_path):\n",
+    "    data = json.load(open(file_path))\n",
+    "    data = data['data']\n",
+    "    new_data = []\n",
+    "    for example in data:\n",
+    "        for paragraph in example['paragraphs']:\n",
+    "            context = paragraph['context']\n",
+    "            for qa in paragraph['qas']:\n",
+    "                question = qa['question']\n",
+    "                answers = qa['answers']\n",
+    "                for answer in answers:\n",
+    "                    new_data.append({'context': context, 'question': question, 'answer': answer['text'], 'answer_start': answer['answer_start'],'title': example['title']})\n",
+    "    return new_data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "630225d8f255445397aecceb30d3a7b8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=212245), Label(value='0 / 212245')…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "df['text'] = df['text'].parallel_apply(normalize_text)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>url</th>\n",
-       "      <th>title</th>\n",
-       "      <th>text</th>\n",
-       "      <th>timestamp</th>\n",
-       "      <th>revid</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>2</td>\n",
-       "      <td>https://vi.wikipedia.org/wiki?curid=2</td>\n",
-       "      <td>Trang Chính</td>\n",
-       "      <td>Trang Chính __NOEDITSECTION__</td>\n",
-       "      <td>2022-05-12 12:46:53+00:00</td>\n",
-       "      <td>68591979</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>4</td>\n",
-       "      <td>https://vi.wikipedia.org/wiki?curid=4</td>\n",
-       "      <td>Internet Society</td>\n",
-       "      <td>Internet Society Internet Society hay ISOC là ...</td>\n",
-       "      <td>2022-01-20 07:59:10+00:00</td>\n",
-       "      <td>67988747</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>13</td>\n",
-       "      <td>https://vi.wikipedia.org/wiki?curid=13</td>\n",
-       "      <td>Tiếng Việt</td>\n",
-       "      <td>Tiếng Việt Tiếng Việt, cũng gọi là tiếng Việt ...</td>\n",
-       "      <td>2022-05-29 03:42:42+00:00</td>\n",
-       "      <td>68660631</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>24</td>\n",
-       "      <td>https://vi.wikipedia.org/wiki?curid=24</td>\n",
-       "      <td>Ohio</td>\n",
-       "      <td>Ohio Ohio (viết tắt là OH, viết tắt cũ là O.) ...</td>\n",
-       "      <td>2022-04-17 08:15:22+00:00</td>\n",
-       "      <td>68482118</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>26</td>\n",
-       "      <td>https://vi.wikipedia.org/wiki?curid=26</td>\n",
-       "      <td>California</td>\n",
-       "      <td>California California (phát âm như \"Ca-li-phót...</td>\n",
-       "      <td>2022-06-16 15:27:07+00:00</td>\n",
-       "      <td>68738039</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id                                     url             title  \\\n",
-       "0   2   https://vi.wikipedia.org/wiki?curid=2       Trang Chính   \n",
-       "1   4   https://vi.wikipedia.org/wiki?curid=4  Internet Society   \n",
-       "2  13  https://vi.wikipedia.org/wiki?curid=13        Tiếng Việt   \n",
-       "3  24  https://vi.wikipedia.org/wiki?curid=24              Ohio   \n",
-       "4  26  https://vi.wikipedia.org/wiki?curid=26        California   \n",
-       "\n",
-       "                                                text  \\\n",
-       "0                      Trang Chính __NOEDITSECTION__   \n",
-       "1  Internet Society Internet Society hay ISOC là ...   \n",
-       "2  Tiếng Việt Tiếng Việt, cũng gọi là tiếng Việt ...   \n",
-       "3  Ohio Ohio (viết tắt là OH, viết tắt cũ là O.) ...   \n",
-       "4  California California (phát âm như \"Ca-li-phót...   \n",
-       "\n",
-       "                  timestamp     revid  \n",
-       "0 2022-05-12 12:46:53+00:00  68591979  \n",
-       "1 2022-01-20 07:59:10+00:00  67988747  \n",
-       "2 2022-05-29 03:42:42+00:00  68660631  \n",
-       "3 2022-04-17 08:15:22+00:00  68482118  \n",
-       "4 2022-06-16 15:27:07+00:00  68738039  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head(5)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 68,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "765e0d512c1b4b6092f18bc10c488920",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "VBox(children=(HBox(children=(IntProgress(value=0, description='0.00%', max=212245), Label(value='0 / 212245')…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "passages = df[['title','text']].parallel_apply(lambda x: ' [SEP] '.join(x), axis=1).tolist()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f9ef8e7be2cb429c89d7a8dcd91f5262",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Batches:   0%|          | 0/32 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "passage_embeddings = passage_encoder.encode(passages,show_progress_bar=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
+    "data = data_extraction('../MLQA_V1/dev/dev-context-vi-question-vi.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Xuân Viên (định hướng) (Score: 80.0451)\n",
-      "Minh Chuẩn (Score: 79.4481)\n",
-      "Hồ Sĩ Tạo (định hướng) (Score: 78.0993)\n",
-      "Đại Đỗ (Score: 77.6928)\n",
-      "Tiết Tương Công (Score: 76.8388)\n",
-      "Le Dourn (Score: 76.7260)\n",
-      "Lâm Đồng (định hướng) (Score: 76.4727)\n",
-      "Lệch khúc xạ (Score: 75.7669)\n",
-      "Doanh thu (kế toán) (Score: 75.3769)\n",
-      "Bộ Huyệt (穴) (Score: 74.9923)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "query = \"Châu Văn Minh sinh ngày mấy\"\n",
-    "query_embedding = query_encoder.encode(query)\n",
-    "\n",
-    "#Important: You must use dot-product, not cosine_similarity\n",
-    "scores = util.dot_score(query_embedding, passage_embeddings)[0].numpy()\n",
-    "scores = zip(range(len(scores)), scores)\n",
-    "scores = sorted(scores, key=lambda x: x[1], reverse=True)\n",
-    "\n",
-    "for idx, score in scores[0:10]:\n",
-    "    print(temp_df.iloc[idx]['title'], \"(Score: %.4f)\" % (score))"
+    "data.extend(data_extraction('../MLQA_V1/test/test-context-vi-question-vi.json'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.to_csv('data_gen/MLQA_V1_vi.csv', index=False)"
    ]
   }
  ],
