--- a/exp.ipynb
+++ b/exp.ipynb
@@ -64,7 +64,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.to_csv('data_gen/MLQA_V1_vi.csv', index=False)"
+    "df.to_csv('data/MLQA_V1_vi.csv', index=False)"
    ]
   }
  ],
