--- a/Q&A_updated_23_12_2022.ipynb.ipynb
+++ b/Q&A_updated_23_12_2022.ipynb.ipynb
@@ -680,7 +680,7 @@
     },
     "gpuClass": "standard",
     "kernelspec": {
-      "display_name": "seminar",
+      "display_name": "Python 3",
       "language": "python",
       "name": "python3"
     },
@@ -694,11 +694,11 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.8"
+      "version": "3.10.8 (tags/v3.10.8:aaaf517, Oct 11 2022, 16:50:30) [MSC v.1933 64 bit (AMD64)]"
     },
     "vscode": {
       "interpreter": {
-        "hash": "179a9ab03ab7fc580160008b73a0897addd1d27f56766aee90c7e6efb706e2c4"
+        "hash": "369f2c481f4da34e4445cda3fffd2e751bd1c4d706f27375911949ba6bb62e1c"
       }
     },
     "widgets": {
